Bug 100846 turbo: should get back on system tray after explorer.exe crash patch by netdemonz@yahoo.com r=biesi sr=jag